--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "ioredis": "^5.5.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
