--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
+    "csv-parser": "^3.2.0",
     "ioredis": "^5.5.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
